# px4_offboard

./: CMakeLists.txt  package.xml
include/: offboardControl.hpp
launch/: sim.launch.py
param/: controller.yaml  joy_config.yaml  xbox_controller.yaml
src/: offboardControl.cpp  offboard_control_node.cpp
